# Colecci-n-de-Ejercicios-STL

./: CMakeLists.txt  README.md  main.cpp  matematicas.cpp  matematicas.h
Ejercicio 1/: matematicas.h
Ejercicio 2/: circulo.cpp  circulo.h  hexagono.cpp  hexagono.h  main.cpp  rectangulo.cpp  rectangulo.h  rombo.cpp  rombo.h  triangulo.cpp  triangulo.h
Ejercicio 3/: circulo.cpp  circulo.h
Ejercicio 4/: ciencia.cpp  ciencia.h  main.cpp
Ejercicio 5/: contenedores.cpp  contenedores.h  main.cpp
